--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,1 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
-<%= link_to 'Sigh In', new_user_session_path, class: 'btn btn-link' %>
-<%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'btn btn-link'%>
+SparkingImage Home Page
