create admin pages

--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -1,3 +1,13 @@
 %ul.nav.nav-tabs.nav-stacked
   %li
     = link_to 'Home', root_path
+  %li
+    = link_to 'Users', users_path
+  %li
+    = link_to 'Requests', requests_path
+  %li
+    = link_to 'Locations', locations_path
+  %li
+    = link_to 'Problem Areas', problem_areas_path
+  %li
+    = link_to 'Statuses', statuses_path
