--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,6 +1,10 @@
-%h2
-  .row-fluid
-    Users:
+.row-fluid
+  .text-left.span6
+    %h2
+      Users:
+  .text-right.span6
+    = link_to 'New User', new_user_path, class: 'btn btn-info'
+= will_paginate @users
 %table.table.table-striped
   %tr
     %th
@@ -11,6 +15,7 @@
       Last Name
     %th
       Registered at
+    %th
   - @users.each do |user|
     %tr
       %td
@@ -21,3 +26,9 @@
         = user.lastname
       %td
         = user.created_at
+      %td{style: 'text-align: right'}
+        = link_to 'Show', user_path(user), class: 'btn'
+        = link_to 'Edit', edit_user_path(user), class: 'btn btn-primary'
+        = link_to 'Destroy', user_path(user), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
+= will_paginate @users
+
