--- a/app/views/clients/new.html.haml
+++ b/app/views/clients/new.html.haml
@@ -4,5 +4,5 @@
       %h2
         New User
     .text-right.span4
-      = link_to 'Back', users_path, class: 'btn btn-info'
+      = link_to 'Back', clients_path, class: 'btn btn-info'
 = render 'form'
