--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -2,7 +2,7 @@
   %li
     = link_to 'Home', root_path
   %li
-    = link_to 'Users', users_path
+    = link_to 'Users', clients_path
   %li
     = link_to 'Requests', requests_path
   %li
