remove custom entering id

--- a/app/views/locations/new.html.haml
+++ b/app/views/locations/new.html.haml
@@ -2,7 +2,7 @@
   .row-fluid
     .text-left.span8
       %h2
-        New Request
+        New Location
     .text-right.span4
-      = link_to 'Back', requests_path, class: 'btn btn-info'
+      = link_to 'Back', locations_path, class: 'btn btn-info'
 = render 'form'
