--- a/app/views/locations/_form.html.haml
+++ b/app/views/locations/_form.html.haml
@@ -3,7 +3,7 @@
     .control-label
       Name:
     .controls
-      = f.text_area :name, class: 'span6', rows: 4
+      = f.text_field :name, class: 'span6', rows: 4
   .control-group
     .controls
       = f.submit class: 'btn btn-info'
