--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -4,21 +4,9 @@
       Locations:
   .text-right.span6
     = link_to 'New location', new_location_path, class: 'btn btn-info'
-%table.table.table-striped
-  %tr
-    %th
-      Id
-    %th
-      Name
-    %th
-
-  - @locations.each do |location|
-    %tr
-      %td
-        = location.id
-      %td
-        = location.name
-      %td{style: 'text-align: right'}
-        = link_to 'Show', location_path(location), class: 'btn'
-        = link_to 'Edit', edit_location_path(location), class: 'btn btn-primary'
-        = link_to 'Destroy', location_path(location), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
+%span12
+  = grid(@locations_grid, upper_pagination_panel: true) do |g|
+    - g.column name: 'Name', attribute: 'name'  do |location|
+      - location.name
+    - g.column do |location|
+      - link_to('Show', location_path(location)) + ' ' + link_to('Edit', edit_location_path(location)) + ' ' + link_to('Destroy', location_path(location), method: :delete, data: { confirm: 'Are you sure?' })
