add validations to request

--- a/app/views/problem_areas/_form.html.haml
+++ b/app/views/problem_areas/_form.html.haml
@@ -1,3 +1,8 @@
+- if @area.errors.any?
+  - @area.errors.full_messages.each do |msg|
+    .alert.alert-error
+      %button.close{type: :button, 'data-dismiss' => 'alert'}
+      = msg
 - url = (@area.id)?problem_area_path(@area):problem_areas_path
 - method = (@area.id)? :put : :post
 = form_for(@area, :url => url, :method => method, class: 'form-horizontal') do |f|
