--- a/app/views/locations/_form.html.haml
+++ b/app/views/locations/_form.html.haml
@@ -1,3 +1,8 @@
+- if @location.errors.any?
+  - @location.errors.full_messages.each do |msg|
+    .alert.alert-error
+      %button.close{type: :button, 'data-dismiss' => 'alert'}
+      = msg
 = form_for(@location, class: 'form-horizontal') do |f|
   .control-group
     .control-label
