--- a/app/views/requests/_form.html.haml
+++ b/app/views/requests/_form.html.haml
@@ -1,3 +1,8 @@
+- if @request.errors.any?
+  - @request.errors.full_messages.each do |msg|
+    .alert.alert-error
+      %button.close{type: :button, 'data-dismiss' => 'alert'}
+      = msg
 = form_for(@request, class: 'form-horizontal') do |f|
   .control-group
     .control-label
