--- a/app/views/requests/_form.html.haml
+++ b/app/views/requests/_form.html.haml
@@ -44,7 +44,7 @@
           });
   .control-group
     .control-label
-      Importance:   (       case 0: return @"Low";case 1: return @"Normal";case 2:return @"Urgent";)
+      Importance:
     .controls
       = f.radio_button :importance, 0, :checked => true
       Low
