--- a/app/views/requests/show.html.haml
+++ b/app/views/requests/show.html.haml
@@ -13,7 +13,7 @@
 %p
   %b
     Creation Date:
-  = @request.creation_date
+  = @request.creation_date.strftime("%m-%d-%Y EST" ) if @request.creation_date
 %p
   %b
     Description:
@@ -21,7 +21,7 @@
 %p
   %b
     Last reviewed:
-  = @request.last_reviewed
+  = @request.last_reviewed.strftime("%m-%d-%Y EST" ) if @request.last_reviewed
 %p
   %b
     Importance:
