--- a/app/views/layouts/_authentication.html.haml
+++ b/app/views/layouts/_authentication.html.haml
@@ -1,6 +1,9 @@
 - if current_user
   = current_user.email
   = link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'btn btn-link'
+  %br
+  My role:
+  = current_user.roles.first.name
 - else
   = link_to 'Sign Up', new_user_registration_path, class: 'btn btn-link'
   = link_to 'Sigh In', new_user_session_path, class: 'btn btn-link'
