request view refactoring

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -42,5 +42,5 @@
           .span2
             = render partial: 'layouts/sidebar'
           .span10
-            .well{style: 'overflow-x: scroll'}
+            .well{style: 'overflow-x: auto'}
               = yield
